gac_sb/objects/INNOtimeSheet__c.object
<CustomObject>
    <fields>
        <fullName>CleUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Clé unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <description>La durée passé en jour (compris entre 0 et 1):
1 = toute la journée
0.5 = une demi-journée</description>
        <label>Durée</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Audit__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_Audit__c || Date__c &gt; Mission_CIR__r.Date_fin_audit__c</formula>
        <label>Hors phase - Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Justification__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_justification__c || Date__c &gt; Mission_CIR__r.Date_fin_justification_recap__c</formula>
        <label>Hors phase - Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Valorisation__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_valorisation__c || Date__c &gt; Mission_CIR__r.Date_fin_justification_recap__c</formula>
        <label>Hors phase - Valorisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission CIR</label>
        <referenceTo>INNOmission__c</referenceTo>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Valorisation</fullName>
                </value>
                <value>
                    <fullName>Justification</fullName>
                </value>
                <value>
                    <fullName>Contrôle</fullName>
                </value>
                <value>
                    <fullName>Formation</fullName>
                </value>
                <value>
                    <fullName>Disponibilité</fullName>
                </value>
                <value>
                    <fullName>Avant-Vente / AO</fullName>
                </value>
                <value>
                    <fullName>AS/DI</fullName>
                </value>
                <value>
                    <fullName>CP / RTT</fullName>
                </value>
                <value>
                    <fullName>DUP</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>ASDI</fullName>
                    <isActive>false</isActive>
                    <label>ASDI</label>
                </value>
                <value>
                    <fullName>Administratif</fullName>
                    <isActive>false</isActive>
                    <label>Administratif</label>
                </value>
                <value>
                    <fullName>CP</fullName>
                    <isActive>false</isActive>
                    <label>CP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_technique__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(Phase__c), &apos;Avant-Vente / AO&apos;, &apos;AvantVenteAO&apos;), &apos;Disponibilité&apos;, &apos;Disponibilite&apos;), &apos;Contrôle&apos;, &apos;Controle&apos;), &apos;AS/DI&apos;, &apos;ASDI&apos;), &apos;CP / RTT&apos;, &apos;CP&apos;)</formula>
        <label>Phase technique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semaine__c</fullName>
        <description>Rempli par Workflow</description>
        <label>Semaine</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theorique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Théorique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilisateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilisateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>INNOtimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TimeSheet CIR</label>
    <nameField>
        <displayFormat>TS-{000000000}</displayFormat>
        <label>TimeSheets INNO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheets CIR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>INNO_Duree_entre_0_et_1</fullName>
        <active>true</active>
        <description>La durée de la TimeSheet doit être comprise entre 0 et 1</description>
        <errorConditionFormula>Duree__c &lt; 0 || Duree__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Duree__c</errorDisplayField>
        <errorMessage>La durée de la TimeSheet doit être comprise entre 0 et 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INNO_Phase_et_Mission</fullName>
        <active>true</active>
        <description>Check si les timesheets ayant les phases Audit, Valorisation, Justification et Contrôle ont bien une mission.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Phase__c, &apos;Audit&apos;), ISPICKVAL(Phase__c, &apos;Valorisation&apos;), ISPICKVAL(Phase__c, &apos;Justification&apos;), ISPICKVAL(Phase__c, &apos;Contrôle&apos;)), ISBLANK(Mission_CIR__c))</errorConditionFormula>
        <errorMessage>Attention vous avez entré des TimeSheets avec une phase nécessitant une mission !</errorMessage>
    </validationRules>
</CustomObject>